--- a/css/blocks/content.css
+++ b/css/blocks/content.css
@@ -20,12 +20,11 @@
 .content-links-wrapper a {
 	display: block;
 	padding: 14px 0;
-	background-color: #85b54a;
 	font-family: 'FedraSansPro-Light', sans-serif;
 	font-size: 24px;
 	line-height: 28px;
 	text-align: center;
-	color: #fff;
+	color: #000000;
 	border: 1px solid #578322;
 	border-radius: 7px;
 	margin-bottom: 30px;
