--- a/css/blocks/procedur.css
+++ b/css/blocks/procedur.css
@@ -110,6 +110,11 @@
 	text-align: center;
 }
 
+.procedur-foto img {
+	width: 100%;
+	max-width: 100%;
+}
+
 .procedur-info {
 	font-family: 'PT Sans Caption', sans-serif;
 	font-size: 16px;
