--- a/css/blocks/publics.css
+++ b/css/blocks/publics.css
@@ -8,12 +8,12 @@
 
 .publics-item-title {
 	margin-bottom: 19px;
-	padding-right: 45px;
 	font-family: 'PT Sans Caption', sans-serif;
 	font-size: 18px;
 	line-height: 28px;
 	font-weight: bold;
 	color: #000;
+	text-align: center;
 }
 
 .publics-item {
@@ -22,6 +22,11 @@
 
 .publics-image {
 	text-align: center;
+}
+
+.publics-image img {
+	width: 100%;
+	max-width: 100%;
 }
 
 
