--- a/css/css3.css
+++ b/css/css3.css
@@ -22,6 +22,8 @@
 @import "blocks/services.css";
 @import "blocks/priceuslugi.css";
 @import "blocks/priceusluga.css";
+@import "blocks/find.css";
+@import "blocks/kruroplastic.css";
 @import "blocks/iwant.css";
 @import "blocks/news.css";
 @import "blocks/news-one.css";
