--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -131,15 +131,13 @@
 }
 
 .contacts-map {
-	width: 292px;
-	height: 345px;
 	margin: 0 auto;
 	margin-bottom: 32px;
 	background: url("../../images/map.jpg") 0 0 no-repeat;
 }
 
 .contacts-map iframe {
-	width: 292px;
+	width: 100%;
 	height: 345px;
 	border: 0;
 }
