--- a/css/blocks/main-slider.css
+++ b/css/blocks/main-slider.css
@@ -1,6 +1,5 @@
 .main-slider-wrapper {
-	width: 320px;
-	height: 386px;
+
 	margin: 0 auto;
 	background-color: #000;
 	overflow: hidden;
@@ -13,15 +12,22 @@
 
 .main-slider-title {
 	position: absolute;
+	width: 100%;
+	padding: 0 15px;
 	bottom: 45px;
 	left: 1px;	
-	padding: 0 30px;
 	font-family: 'Roboto', sans-serif;
 	font-size: 22px;
 	line-height: 30px;
 	font-weight: 100;
 	text-align: center;
 	text-transform: uppercase;
+}
+
+.main-slider-image img {
+	width: 100%;
+	max-width: 100%;
+	height: auto;
 }
 
 .slick-dotted.slick-slider {
