--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -30,10 +30,14 @@
 	background-color: #606060;
 }
 
-.contacts-stations {
+.contacts-location {
 	font-size: 0;
 	margin-bottom: 21px;
 	text-align: center;
+}
+
+.contacts-location.ekb {
+	display: none;
 }
 
 .contacts-station {
@@ -57,7 +61,7 @@
 }
 
 .contacts-info {
-	width: 296px;
+	max-width: 398px;
 	margin: 0 auto;
 	padding-left: 31px;
 	margin-bottom: 28px;
@@ -66,6 +70,14 @@
 	line-height: 28px;
 	font-weight: normal;
 	color: #000;
+}
+
+.contacts-info.novoslobodskaya {
+	display: none;
+}
+
+.contacts-info.ekb {
+	display: none;
 }
 
 .contacts-adress {
@@ -111,7 +123,6 @@
 }
 
 .contacts-tel {
-
 	color: #578322;
 	font-weight: bold;
 }
@@ -133,7 +144,15 @@
 .contacts-map {
 	margin: 0 auto;
 	margin-bottom: 32px;
-	background: url("../../images/map.jpg") 0 0 no-repeat;
+	background-color: #EAEAEA;
+}
+
+.contacts-map.novoslobodskaya {
+	display: none;
+}
+
+.contacts-map.ekb {
+	display: none;
 }
 
 .contacts-map iframe {
