--- a/css/blocks/iwant.css
+++ b/css/blocks/iwant.css
@@ -129,7 +129,7 @@
 	transform: translateY(-50%);
 }
 
-.iwant-item.open .iwant-question-title::after {
+.iwant-question-title.active::after {
 	content: '-';
 }
 
@@ -149,6 +149,7 @@
 }
 
 .iwant-answer {
+	display: none;
 	padding-top: 14px;
 }
 
@@ -206,4 +207,17 @@
 	display: block;
 	text-align: center;
 	color: #85b54a;
+}
+
+@media (min-width: 460px) {
+
+	.iwant-answer-specialists {
+		font-size: 0;
+	}
+
+	.iwant-answer-specialists .specialist {
+		display: inline-block;
+		vertical-align: top;
+		width: 50%;
+	}
 }
